# PokeSoul

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DOCKER.md  README.md  TESTING.md  docker.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini
PokeSoul/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  dataclasses.py  exceptions.py  global_exception_handler.py  middleware.py  models.py  urls.py  views.py
core/management/commands/: seed_questions.py
core/migrations/: 0001_initial.py  0002_alter_question_options_and_more.py
core/templates/core/: home.html  question.html  quiz_result.html
docker/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml
fixtures/: question_set.json
matcher/: cache.py  constants.py  dataclasses.py  exceptions.py  matching_engine.py  models.py  preference_extractor.py  urls.py  views.py
matcher/migrations/: 0001_initial.py
matcher/tests/: factories.py  test_api.py  test_cache.py  test_matching_engine.py  test_utils.py
pokemons/: admin.py  cache.py  dataclasses.py  exceptions.py  models.py  pokeapi.py  serializers.py  services.py  urls.py  views.py
pokemons/management/commands/: load_top_pokemons.py
pokemons/migrations/: 0001_initial.py  0002_alter_pokemon_options_pokemon_updated_at_and_more.py  0003_pokemon_cries_url_pokemon_image_url_and_more.py
pokemons/tests/: test_admin.py  test_api.py  test_models.py
templates/: base.html
